# pageindex

./: .dockerignore  .env.example  .gitignore  AGENT_DRIVEN_DEVELOPMENT.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  Dockerfile  IdeasV2.md  PRD.md  README.md  RESEARCH.md  TOOLS.md  docker-compose.yml  gunicorn.conf.py  mcp_server.py  pageindex-worker-deploy-diagnosis.md  preprocess_client.py  pyproject.toml  stress_test.py  test.py  upload.py
.agents/context/: arch-brief.md  claude-brief.md  design-brief.md  prd-brief.md
.agents/contracts/: cache-01.yaml  conv-01.yaml  erase-01.yaml  flat-01.yaml  flat-02.yaml  flat-03.yaml  flat-04.yaml  flat-05.yaml  index-01.yaml  lang-01.yaml  llm-01.yaml  llm-02.yaml  ocr-01.yaml  rag-01.yaml  split-01.yaml  store-01.yaml  table-01.yaml  upload-01.yaml  worker-01.yaml
.agents/governance/: dag.yaml  develop-guide.yaml  known-advisories.yaml  scope-checklist.yaml  verify-gates.yaml  vocabulary.yaml
.agents/plans/: openai-compatible-endpoints.md
.agents/rfcs/: 000-foundational-design.md  001-initial-plan-review.md  002-pending-decisions-resolution.md  003-tier0-decision-lock.md  004-vlm-hierarchy-detection.md  005-hard-corpus-ingestion-fixes.md
.agents/state/: PENDING_DECISIONS.md  execution-log.jsonl  swarm-builder-features.txt
.github/workflows/: build-push.yml
.serena/: project.yml
docs/: architecture.drawio
docs/superpowers/plans/: 2026-04-07-grafana-monitoring.md  2026-04-08-scaling-pageindex-mcp.md  2026-04-08-stress-test-redesign.md  2026-06-13-worker-concurrency-autoscaling.md
docs/superpowers/specs/: 2026-04-06-custom-pageindex-client-design.md  2026-04-07-grafana-monitoring-design.md  2026-04-08-stress-test-redesign.md  2026-04-10-minio-staging-upload-fix-design.md  2026-06-13-worker-concurrency-autoscaling-design.md
issue/: data2_fixes_validation_report.md  data2_performance_report.md  phase0_results.json  phase0_vlm_probe.py  probe_toc.py  repro_katzen.py  verify_corpus.py
issue/data2/: NAS GN Network - September 2024 - Copy.xlsx
plans/: 01-subprocess-isolated-converter.md  02-pageindex-worker-intra-pod-concurrency.md
postman/: PageIndex_API.postman_collection.json  PageIndex_Local.postman_environment.json  PageIndex_Production.postman_environment.json
scripts/: eval.sh  prebake_tessdata.sh
scripts/gates/: build.sh  contracts.sh  dag.sh  e2e.sh  integration.sh  static.sh  supply-chain.sh  unit.sh
scripts/lib/: read-yaml.sh
scripts/spikes/: extract_docling.py  extract_docling_cpu.py  extract_pymupdf4llm.py
src/pageindex_mcp/: __init__.py  auth.py  cache.py  client.py  config.py  converters.py  converters_cli.py  helpers.py  memory_admission.py  metrics.py  queue_metrics.py  server.py  storage.py  tracing.py  upload_app.py  worker.py
src/pageindex_mcp/tools/: __init__.py  documents.py  processing.py
tests/: conftest.py  test_cache.py  test_cache_contract.py  test_client.py  test_client_contract.py  test_config.py  test_converters_cli.py  test_converters_contract.py  test_converters_footprint.py  test_depth_inference.py  test_helpers_contract.py  test_memory_admission.py  test_metrics.py  test_outline_inference.py  test_queue_metrics.py  test_rag_contract.py  test_rag_dedup.py  test_read_pdf_outline.py  test_staging_e2e.py  test_storage_contract.py  test_storage_meta.py  test_tracing.py  test_upload.py  test_upload_contract.py  test_validate_tree_contract.py  test_worker.py  test_worker_contract.py  test_worker_resiliency.py  test_worker_subprocess.py
