[project]
name = "pageindex-mcp"
version = "1.0.0"
description = "PageIndex MCP Server — vectorless reasoning-based RAG via FastMCP"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.3",
    "litellm>=1.83.0",
    "pymupdf>=1.27.2.2",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "openai>=2.31.0",
    "httpx>=0.28.1",
    "python-pptx>=1.0.2",
    "python-docx>=1.2.0",
    "minio>=7.2.20",
    "html2text>=2025.4.15",
    "redis[asyncio]>=5.3.1",
    "arq>=0.27.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "anyio>=4.13.0",
    "python-multipart>=0.0.24",
    "prometheus_client>=0.20.0",
    "gunicorn>=25.3.0",
    "pageindex @ git+https://github.com/trehansalil/PageIndex-salil.git",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "fakeredis[aioredis]", "langchain-mcp-adapters", "langchain[openai]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pageindex_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
pageindex-mcp = "pageindex_mcp.server:main"
