[project]
name = "pageindex-mcp"
version = "1.0.0"
description = "PageIndex MCP Server — vectorless reasoning-based RAG via FastMCP"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.3",
    "litellm>=1.83.0",
    "pymupdf>=1.27.2.2",
    # AGPL-3.0 (HR4); kept as the secondary/fallback PDF route behind Docling.
    "pymupdf4llm>=0.0.17",
    # Default PDF->markdown route (PDF_CONVERTER=docling). MIT, layout-aware, runs
    # CPU-only; resolves the fl-ligature corruption pymupdf4llm leaves in German
    # legal terms ("Haftpflicht"). Promoted to core 2026-05-31 so the default works
    # out-of-the-box. Heavy: pulls torch. Validated on the German insurance corpus.
    "docling>=2.96.0",
    # Heading-hierarchy recovery add-on for Docling (krrome, MIT). Rebuilds
    # heading SELECTION from the PDF outline/numbering, removing font-size false
    # positives so trees are clean enough to clear the depth>=2 quality gate (HR5).
    # Single-maintainer/unofficial; the converter degrades to raw Docling headings
    # if it is absent. Pulls scikit-learn. Validated on the German corpus 2026-05-31.
    "docling-hierarchical-pdf>=0.1.8",
    # torch/torchvision are Docling's heaviest transitive deps. We declare them
    # DIRECTLY (not leave them transitive) for ONE reason: uv only honors the
    # [tool.uv.sources] CPU-index routing below for *declared* dependencies — a
    # purely-transitive torch silently keeps the default CUDA (cu13) build and its
    # ~2 GB of nvidia-*/cuda-* wheels. Lower bounds track what Docling resolves; the
    # CPU route turns 2.12.0 into 2.12.0+cpu on Linux while macOS keeps PyPI arm64.
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "openai>=2.31.0",
    "httpx>=0.28.1",
    "python-pptx>=1.0.2",
    "python-docx>=1.2.0",
    "minio>=7.2.20",
    "html2text>=2025.4.15",
    "redis[asyncio]>=5.3.1",
    "arq>=0.27.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "anyio>=4.13.0",
    "python-multipart>=0.0.24",
    "prometheus_client>=0.20.0",
    "gunicorn>=25.3.0",
    "pageindex @ git+https://github.com/trehansalil/PageIndex-salil.git",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "fakeredis[aioredis]", "langchain-mcp-adapters", "langchain[openai]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pageindex_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
pageindex-mcp = "pageindex_mcp.server:main"

# ── CPU-only PyTorch on Linux ────────────────────────────────────────────────
# Docling pulls torch + torchvision transitively (via docling-ibm-models). The
# default PyPI torch on Linux is the CUDA (cu13) build, which drags in ~2 GB of
# nvidia-* / cuda-* wheels we never use — this stack runs Docling CPU-only. Route
# torch/torchvision to PyTorch's CPU index to drop all of that from the image.
#
# Marker `sys_platform == 'linux'` is MANDATORY, not cosmetic: the /whl/cpu index
# publishes NO macOS wheels, so macOS dev (`uv sync` on darwin/arm64) must fall
# back to the default PyPI wheels (native arm64 CPU/MPS). `explicit = true` scopes
# the index to ONLY the packages routed below — everything else stays on PyPI.
# Regenerate uv.lock (`uv lock`) after any change here, or `uv sync --frozen` in
# the Dockerfile will fail on a pyproject/lock mismatch.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
