[project]
name = "pageindex-mcp"
version = "1.0.0"
description = "PageIndex MCP Server — vectorless reasoning-based RAG via FastMCP"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.3",
    "litellm>=1.83.0",
    # pypdfium2 (BSD-3/Apache-2): PDF outline/bookmark reads in converters.py
    # (_read_pdf_outline). Replaced the first-party PyMuPDF (AGPL-3.0) get_toc call
    # (RFC-004 Q2, HR4) so zero first-party AGPL touches the default / VLM-bound PDF
    # path. Already resolved transitively via Docling; declared directly because we
    # import it directly.
    "pypdfium2>=5.8.0",
    # Default PDF->markdown route (PDF_CONVERTER=docling). MIT, layout-aware, runs
    # CPU-only; resolves the fl-ligature corruption pymupdf4llm leaves in German
    # legal terms ("Haftpflicht"). Promoted to core 2026-05-31 so the default works
    # out-of-the-box. Heavy: pulls torch. Validated on the German insurance corpus.
    "docling>=2.96.0",
    # Heading-hierarchy recovery add-on for Docling (krrome, MIT). Rebuilds
    # heading SELECTION from the PDF outline/numbering, removing font-size false
    # positives so trees are clean enough to clear the depth>=2 quality gate (HR5).
    # Single-maintainer/unofficial; the converter degrades to raw Docling headings
    # if it is absent. Pulls scikit-learn. Validated on the German corpus 2026-05-31.
    "docling-hierarchical-pdf>=0.1.8",
    # torch/torchvision are Docling's heaviest transitive deps. We declare them
    # DIRECTLY (not leave them transitive) for ONE reason: uv only honors the
    # [tool.uv.sources] CPU-index routing below for *declared* dependencies — a
    # purely-transitive torch silently keeps the default CUDA (cu13) build and its
    # ~2 GB of nvidia-*/cuda-* wheels. Lower bounds track what Docling resolves; the
    # CPU route turns 2.12.0 into 2.12.0+cpu on Linux while macOS keeps PyPI arm64.
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "openai>=2.31.0",
    "httpx>=0.28.1",
    "python-pptx>=1.0.2",
    "python-docx>=1.2.0",
    "minio>=7.2.20",
    "html2text>=2025.4.15",
    "redis[asyncio]>=5.3.1",
    "arq>=0.27.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "anyio>=4.13.0",
    "python-multipart>=0.0.24",
    "prometheus_client>=0.20.0",
    "gunicorn>=25.3.0",
    "pageindex @ git+https://github.com/trehansalil/PageIndex-salil.git",
    "langfuse>=3.0.0",
    # openpyxl (MIT, HR4-clean): .xlsx -> markdown table adapter (Fix 4).
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "fakeredis[aioredis]", "langchain-mcp-adapters", "langchain[openai]", "ruff>=0.15.17"]
# AGPL-3.0 (HR4). pymupdf4llm is the secondary/fallback PDF->markdown route behind
# Docling; it transitively pulls PyMuPDF (AGPL). Moved OUT of core deps (RFC-004 Q2
# follow-up, Amendment 4) so the DEFAULT install carries no first-party AGPL converter.
# Install with `uv sync --extra agpl-fallback` to restore the pymupdf4llm fallback.
#
# IMPORTANT — this does NOT make the venv AGPL-free: PyMuPDF is still pulled
# TRANSITIVELY by two CORE deps — docling-hierarchical-pdf and the `pageindex` git
# fork (see [[agpl-three-pullers-correction]]; uv.lock pymupdf reverse-deps). Full
# HR4 elimination requires addressing those two pullers as well.
agpl-fallback = ["pymupdf4llm>=0.0.17"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pageindex_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real Docling / external services (set DOCLING_INTEGRATION=1)",
]

[project.scripts]
pageindex-mcp = "pageindex_mcp.server:main"

# ── Ruff: linter + formatter (Gate 1 "static" — scripts/gates/static.sh) ──────
# Wires the static-analysis thresholds from .agents/governance/verify-gates.yaml
# (gates.static.*) into the linter so the gate's `ruff check` / `ruff format
# --check` sub-checks stop SKIPping ("no [tool.ruff] config") and actively
# enforce them. ruff lives in the `dev` extra: `uv sync --extra dev`.
#
# Governance threshold → ruff mapping (verify-gates.yaml#gates.static):
#   ruff_violations: 0     → zero-violation policy (any finding fails the gate)
#   format: strict         → `ruff format --check` (formatter owns line length)
#   max_cyclomatic: 15     → C901    + [tool.ruff.lint.mccabe] max-complexity
#   max_params: 5          → PLR0913 + [tool.ruff.lint.pylint] max-args
#   max_function_lines: 50 → PLR0915 + [tool.ruff.lint.pylint] max-statements
#                            (statement count is ruff's closest proxy for body length)
# Governance thresholds with NO stable-ruff rule (still enforced by other means /
# tracked as future work, NOT silently dropped):
#   max_file_lines: 300    → ruff has no file-length rule
#   max_nesting_depth: 4   → PLR1702 (too-many-nested-blocks) is preview-only;
#                            enabling preview would pull in unstable rules, so it
#                            stays off and this threshold is left to code review.
# The layer-isolation import rules (no_minio_outside_storage, …) remain enforced
# by static.sh's grep heuristic. This config intentionally does NOT use ruff's
# tidy-import / import-contract knobs, because static.sh switches off its grep
# branch the moment those config tokens appear — and the contract-runner CLI is
# not installed, which would turn 4 passing checks into skips.
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle errors + warnings
    "F",        # pyflakes
    "I",        # isort (import ordering)
    "UP",       # pyupgrade (py3.12 idioms)
    "B",        # flake8-bugbear (likely bugs)
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "C901",     # mccabe cyclomatic complexity   → gates.static.max_cyclomatic
    "PLR0913",  # too-many-arguments             → gates.static.max_params
    "PLR0915",  # too-many-statements            → gates.static.max_function_lines
    "RUF",      # ruff-specific (incl. RUF100 unused-noqa)
]
ignore = [
    # German-insurance corpus (CLAUDE.md §Identity): source comments and
    # docstrings legitimately contain non-breaking hyphens, ß, and similar
    # glyphs. The ambiguous-unicode confusable checks are noise for this domain,
    # not defects — keep them off rather than mangling German terms.
    "RUF001", "RUF002", "RUF003",
]

[tool.ruff.lint.mccabe]
max-complexity = 15   # verify-gates.yaml gates.static.max_cyclomatic

[tool.ruff.lint.pylint]
max-args = 5          # verify-gates.yaml gates.static.max_params
max-statements = 50   # verify-gates.yaml gates.static.max_function_lines

[tool.ruff.lint.per-file-ignores]
# Test bodies are allowed to be long, parametrized, and many-argument.
"tests/**" = ["PLR0913", "PLR0915", "C901"]

# ── CPU-only PyTorch on Linux ────────────────────────────────────────────────
# Docling pulls torch + torchvision transitively (via docling-ibm-models). The
# default PyPI torch on Linux is the CUDA (cu13) build, which drags in ~2 GB of
# nvidia-* / cuda-* wheels we never use — this stack runs Docling CPU-only. Route
# torch/torchvision to PyTorch's CPU index to drop all of that from the image.
#
# Marker `sys_platform == 'linux'` is MANDATORY, not cosmetic: the /whl/cpu index
# publishes NO macOS wheels, so macOS dev (`uv sync` on darwin/arm64) must fall
# back to the default PyPI wheels (native arm64 CPU/MPS). `explicit = true` scopes
# the index to ONLY the packages routed below — everything else stays on PyPI.
# Regenerate uv.lock (`uv lock`) after any change here, or `uv sync --frozen` in
# the Dockerfile will fail on a pyproject/lock mismatch.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
